2005-01-20  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* src/htdocs/documentation/index.xml:
	* src/htdocs/news/news.xml:
	  fix link to new licensing page

2005-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/Makefile.am:
	* src/htdocs/documentation/licensing.xml:
	* src/htdocs/documentation/licensingfaq.xml:
	  remove faq here and point to faq in faq.  faq off.

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	  releasing 0.8.7

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.7.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  release notes for gst-plugins 0.8.7

2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.3.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release notes for GStreamer FFmpeg 0.8.3 "Tiny Piece of Plastic".

2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.8.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  new core release

2004-12-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix up gpg verification

2004-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Aurelien Mino

	* src/htdocs/bindings/bindings.xml:
	* src/htdocs/dev/index.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/modules/modules.xsl:
	* src/htdocs/tasks/code.xml:
	  change gst-cvs-http and use it everywhere

2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.6.xml:
	  Christian's suggestions

2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/bugzilla:
	  fix script to handle entities
	* bin/www-update: